RESOLVED FIXED262694
[LBSE] Fix visual overflow computation
https://bugs.webkit.org/show_bug.cgi?id=262694
Summary [LBSE] Fix visual overflow computation
Nikolas Zimmermann
Reported 2023-10-05 05:28:18 PDT
The coordinate system for 'visualOverflowRectEquivalent' is wrong -- transformations are included, where they shouldn't (since mid-2022 SVG layout is not affected by transformations anymore - they're now purely a paint-time effect like in HTML/CSS - see https://trac.webkit.org/changeset/293504/webkit).
Attachments
Nikolas Zimmermann
Comment 1 2023-10-05 06:43:08 PDT
EWS
Comment 2 2023-10-06 04:08:21 PDT
Committed 268981@main (6c8fe3a7b838): <https://commits.webkit.org/268981@main> Reviewed commits have been landed. Closing PR #18692 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-10-06 04:09:15 PDT
Note You need to log in before you can comment on or make changes to this bug.