Source/WebCore/rendering/svg/RenderSVGForeignObject.h
@@ -52,8 +52,6 @@ private:
     void graphicsElement() const = delete;
     ASCIILiteral renderName() const override { return "RenderSVGForeignObject"_s; }
 
-    LayoutPoint paintingLocation() const { return toLayoutPoint(location() - flooredLayoutPoint(m_viewport.minXMinYCorner())); }
-
     void updateLogicalWidth() override;
     LogicalExtentComputedValues computeLogicalHeight(LayoutUnit logicalHeight, LayoutUnit logicalTop) const override;
 
@@ -69,7 +67,6 @@ private:
     void applyTransform(TransformationMatrix&, const RenderStyle&, const FloatRect& boundingBox, OptionSet<RenderStyle::TransformOperationOption>) const final;
 
     FloatRect m_viewport;
-    AffineTransform m_supplementalLayerTransform;
 };
 
 } // namespace WebCore
